--- a/pom.xml
+++ b/pom.xml
@@ -37,7 +37,14 @@
             <artifactId>dbunit</artifactId>
             <version>2.7.0</version>
             <scope>test</scope>            
-        </dependency>  
+        </dependency>
+        <dependency>
+            <groupId>javax.persistence</groupId>
+            <artifactId>javax.persistence-api</artifactId>
+            <version>2.2</version>
+            <scope>test</scope>
+            <type>jar</type>
+        </dependency>
     </dependencies>
     <name>indebate</name>
 </project>
